this is for clinton

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,10 @@
 <div class="container pt-5">
-<div class="row border-bottom">
+
+{{> header}}
+
+<div class="row">
   <div class="col">
-    <h1 class="display-1 text-center">UpR&uuml;td</h1>
+    <p>Welcome to UpRootd! Search below for your favorite kava root, and see its rating. Sign up and login to add your own rating. Happy drinking 😄 BULA!</p>
   </div>
 </div>
 
