--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,7 +1,10 @@
 <div class="container pt-5">
+  
+  {{> header}}
+
   <div class="row">
     <div class="col text-center">
-      <h1 class="display-2">{{user.name}}</h1>
+      <h1 class="display-3">{{user.name}}</h1>
       <h2 class="">{{user.location}}</h2>
       {{!-- <h3 class="">{{user.description}}</h3> --}}
     </div>
@@ -9,7 +12,7 @@
   
   <div class="row">
     <div class="col text-center">
-      <h2 class="display-3">Reviews</h2>
+      <h2 class="display-4">Reviews</h2>
       <ul>
         {{#each user.reviews}}
           <li>Kava {{kavaId}}: {{rating}}</li>
