--- a/views/kava.handlebars
+++ b/views/kava.handlebars
@@ -1,18 +1,13 @@
-<div class="container pt-5">
-
-  {{> header}}
-  
-  <div class="row">
-    <div class="col text-center">
-      <h1 class="display-3">{{kava.name}}</h1>
-      <h2>{{kava.country}}</h2>
-      <h3>{{kava.description}}</h3>
-    </div>
+<div class="row">
+  <div class="col center-align">
+    <h1>{{kava.name}}</h1>
+    <h2>{{kava.country}}</h2>
+    <h3>{{kava.description}}</h3>
   </div>
-  
-  <div class="row">
-    <div class="col text-center">
-      <h2 class="display-4">{{kava.rating}}</h2>
-    </div>
+</div>
+
+<div class="row">
+  <div class="col center-align">
+    <h2>{{kava.rating}}</h2>
   </div>
 </div>
