--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,21 +3,29 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blog - Express</title>
+  <title>UpRootd App</title>
   <!-- Latest compiled and minified CSS & JS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+  <link href="https://fonts.googleapis.com/css?family=Averia+Libre:700|Dosis|Philosopher:700|Poiret+One|Quattrocento+Sans:700|Special+Elite" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title">
 </head>
 
-<body>
-  {{{body}}}
+<body class="brown lighten-4">
+  <div class="container grey lighten-4 z-depth-2">
+    {{> header}}
+    {{{body}}}
+  </div>
 
 
 
   <!-- Custom Script -->
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/js/main.js" type="text/javascript"></script>
+  
 
 </body>
 
