--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,89 @@
-<div class="row border-bottom mb-5">
-  <div class="col">
-    <a href="/login" class="float-right">Login/Sign Up</a>
-    <h1 class="display-1 text-center">UpRootd</h1>
+<div class="row orange accent-2 page-header z-depth-1">
+  <div class="col s12">
+    <a href="#" class="right tooltipped" data-html="true" data-position="left" data-tooltip="Welcome to UpRootd! Search below for your favorite kava root, and see its rating. Sign up and login to add your own rating. Happy drinking 😄 BULA!"><i class="material-icons black-text">help</i></a>
+
+    <a data-target="loginModal" class="right modal-trigger"><i class="material-icons black-text">person</i></a>
+
+    <h1 class="center-align"><a href="/" class="black-text">UpRootd</a></h1>
+    {{#if isMainPage}}
+      <a class="btn-floating btn-large halfway-fab waves-effect waves-light brown lighten-4 z-depth-2 hoverable"><i class="material-icons black-text">search</i></a>
+    {{/if}}
+  </div>
+</div>
+
+
+<div id="loginModal" class="modal brown lighten-4">
+  <div class="modal-content content-login show">
+    <div class="row">
+      <div class="col s12">
+        <h4 class="center-align">Login</h4>
+        <form action="">  
+          <div class="row">
+            <div class="input-field col s6">
+              <label for="login_username">Username</label>
+              <input type="text" name="login_username" id="login_username" class="validate">
+            </div>
+            <div class="input-field col s6">
+              <label for="login_password">Password</label>
+              <input type="password" name="login_password" id="login_password" class="validate">
+            </div>
+          </div>
+          <div class="row center-align">
+            <div class="col s12">
+              <button class="btn orange accent-2 black-text">Submit <i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+        
+      </div>
+    </div>
+  </div>
+  <div class="modal-content content-register hide">
+    <div class="row">
+      <div class="col s12">
+        <h4 class="center-align">Register</h4>
+        <form action="">
+          <div class="row">
+            <div class="input-field col s6">
+              <label for="name">Full Name</label>
+              <input type="text" name="name" id="name" class="validate">
+            </div>
+            <div class="input-field col s6">
+              <label for="location">Location</label>
+              <input type="text" name="location" id="location" class="validate">
+            </div>
+          </div>  
+          <div class="row">
+            <div class="input-field col s6">
+              <label for="username">Username</label>
+              <input type="text" name="username" id="username" class="validate">
+            </div>
+            <div class="input-field col s6">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" class="validate">
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s6">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" class="validate">
+            </div>
+            <div class="input-field col s6">
+              <label for="conf_password">Confirm Password</label>
+              <input type="password" name="conf_password" id="conf_password" class="validate">
+            </div>
+          </div>
+          <div class="row center-align">
+            <div class="col s12">
+              <button class="btn orange accent-2 black-text">Submit <i class="material-icons right">send</i></button>
+            </div>
+          </div>
+        </form>
+        
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <p class="center-align login-register-toggle">Not registered? <a class="sign-up-link">Sign up today!</a></p>
   </div>
 </div>
