--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -26,7 +26,7 @@
       <tbody>
         {{#each user.reviews}}
           <tr>
-            <td>{{kavaId}}</td>
+            <td>{{kava.name}}</td>
             <td>{{rating}}</td>
           </tr>
         {{/each}}
