--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,7 +6,7 @@
 
     <h1 class="center-align"><a href="/" class="black-text">UpRootd</a></h1>
     {{#if isMainPage}}
-      <div class="input-field">
+      <div class="input-field search-kava">
         <label for="searchKava">Search</label>
         <input type="text" name="searchKava" id="searchKava" class="autocomplete">
       </div>
