added styles to search bar. added 5 star rating system

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@ h1,h2,h3,h4,h5,h6, [class*=title]{
   font-family: 'Averia Libre', cursive;
 }
 
+
 .container{
   margin: 1em auto;
   padding: 0 0 1em;
@@ -28,77 +29,73 @@ h1,h2,h3,h4,h5,h6, [class*=title]{
   cursor: pointer;
 }
 
-
-
-
-
-
-
-/* autocomplete */
-button.submit {
-  float: right;
+[class*=kavas-wrap] .card{
+  padding: 0 .7em;
 }
 
-form#cms {
-  margin-top: 50px;
+.rating-row{
+  position: relative;
+  padding-top: .25em;
 }
 
-#cms textarea {
-  resize: none;
+span.cover {
+  width: 150px;
+  height: 27px;
+  position: absolute;
+  z-index: 1;
 }
 
-.card-header button.delete,
-button.edit {
-  float: right;
-  margin: 5px;
-}
 
-* { box-sizing: border-box; }
-body {
-  font: 16px Arial; 
-}
-.autocomplete {
-  /*the container must be positioned relative:*/
+
+
+/* stars */
+
+.rating {
   position: relative;
   display: inline-block;
+  font-size: 1.5rem;
 }
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
-}
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-.autocomplete-items div {
-  padding: 10px;
+.rating label,
+.rating input[type="radio"] {
+  float: right;
   cursor: pointer;
-  background-color: #fff; 
-  border-bottom: 1px solid #d4d4d4; 
 }
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9; 
+.rating label {
+  display: inline;
+  color: #d7ccc8;
 }
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+/* .rating label:hover, .rating label:focus {
+  color: #F9AC2F;
+} */
+./* rating label:hover ~ label, .rating label:focus ~ label {
+  color: #F9AC2F;
+} */
+.rating input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+.rating input[type="radio"]:checked ~ label {
+  color: #ffab40;
+  text-shadow: 0 0 1px #666;
+}
+
+
+
+
+
+.search-btn.active {
+  border-radius: 56px;width: 85%;text-align: left;padding-left: 1em;overflow: visible;
+}
+
+.search-icon.active {
+  text-align: left;
+  display: inline-block;
+  width: 18%;
+}
+
+.search-kava.input-field.active {
+  /* display: inline-block; */
+  margin-top: .5rem;
+  margin-bottom: .5rem;
 }
