--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,11 +6,14 @@
 
     <h1 class="center-align"><a href="/" class="black-text">UpRootd</a></h1>
     {{#if isMainPage}}
-      <div class="input-field search-kava">
-        <label for="searchKava">Search</label>
-        <input type="text" name="searchKava" id="searchKava" class="autocomplete">
+      
+      <div class="btn-floating btn-large halfway-fab waves-effect waves-light brown lighten-4 z-depth-2 hoverable search-btn">
+        <i class="material-icons black-text search-icon">search</i>
+        <div class="input-field inline search-kava">
+          <label for="searchKava">Search</label>
+          <input type="text" name="searchKava" id="searchKava" class="autocomplete search-kava-input" placeholder="Type a root name">
+        </div>
       </div>
-      <a class="btn-floating btn-large halfway-fab waves-effect waves-light brown lighten-4 z-depth-2 hoverable"><i class="material-icons black-text">search</i></a>
     {{/if}}
   </div>
 </div>
