--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,9 @@
         {{#each kavas}}
           {{#if isTrending}}
             <div class="card horizontal brown lighten-3 hoverable">
-              <div class="card-image"><img src="https://lorempixel.com/120/120" alt=""></div>
+              <div class="card-image valign-wrapper">
+                <img src="/img/flag_{{toLowerCase country}}.png" alt="">
+              </div>
               <div class="card-stacked">
                 <div class="card-content">
                   <span class="card-title">{{name}}</span>
@@ -30,7 +32,9 @@
 
         {{#each kavas}}
           <div class="card horizontal brown lighten-3 hoverable">
-            <div class="card-image"><img src="https://lorempixel.com/120/120" alt=""></div>
+            <div class="card-image valign-wrapper">
+              <img src="/img/flag_{{country}}.png" alt="">
+            </div>
             <div class="card-stacked">
               <div class="card-content">
                 <span class="card-title">{{name}}</span>
