--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col s12">
     <div class="card small brown lighten-3">
-      <div class="card-image"><img src="https://lorempixel.com/500/500" alt=""></div>
+      <div class="card-image white"><img src="/img/tiki.svg" alt=""></div>
       <div class="card-stacked">
         <div class="card-content">
           <span class="card-title">{{user.name}}</span>
@@ -27,7 +27,17 @@
         {{#each user.reviews}}
           <tr>
             <td>{{kava.name}}</td>
-            <td>{{rating}}</td>
+            <td><span class="cover"></span><span class="rating">
+
+              {{#times 5}}
+                <input type="radio" name="{{concat ../kava.name}}-ratingstar" id="{{concat ../kava.name}}{{this}}" value="{{this}}" {{#if_eq this ../rating}}checked{{/if_eq}}><label for="{{concat ../kava.name}}{{this}}"><i class="material-icons z">star</i></label>
+              {{/times}}
+              {{!-- <input type="radio" name="{{concat kava.name}}-ratingstar" id="{{concat kava.name}}5" value="5"><label for="{{concat kava.name}}5"><i class="material-icons z">star</i></label>
+              <input type="radio" name="{{concat kava.name}}-ratingstar" id="{{concat kava.name}}4" value="4" checked><label for="{{concat kava.name}}4"><i class="material-icons z">star</i></label>
+              <input type="radio" name="{{concat kava.name}}-ratingstar" id="{{concat kava.name}}3" value="3"><label for="{{concat kava.name}}3"><i class="material-icons z">star</i></label>
+              <input type="radio" name="{{concat kava.name}}-ratingstar" id="{{concat kava.name}}2" value="2"><label for="{{concat kava.name}}2"><i class="material-icons z">star</i></label>
+              <input type="radio" name="{{concat kava.name}}-ratingstar" id="{{concat kava.name}}1" value="1"><label for="{{concat kava.name}}1"><i class="material-icons z">star</i></label> --}}
+            </span></td>
           </tr>
         {{/each}}
       </tbody>
