--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -61,7 +61,13 @@
         
       </div>
     </div>
+    <div class="modal-footer">
+      <p class="center-align login-register-toggle">Already registered? <a class="sign-up-link">Login Here</a></p>
+    </div>
   </div>
+
+
+
   <div class="modal-content content-register hide">
     <div class="row">
       <div class="col s12">
