--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -37,7 +37,7 @@
 
 
 <div id="loginModal" class="modal brown lighten-4">
-  <div class="modal-content content-login show">
+  <div class="modal-content content-login">
     <div class="row">
       <div class="col s12">
         <h4 class="center-align">Login</h4>
@@ -60,9 +60,6 @@
         </form>
         
       </div>
-    </div>
-    <div class="modal-footer">
-      <p class="center-align login-register-toggle">Already registered? <a class="sign-up-link">Login Here</a></p>
     </div>
   </div>
 
@@ -114,6 +111,7 @@
     </div>
   </div>
   <div class="modal-footer">
+      {{!-- <p class="center-align login-register-toggle">Already registered? <a class="sign-up-link">Login Here</a></p> --}}
     <p class="center-align login-register-toggle">Not registered? <a class="sign-up-link">Sign up today!</a></p>
   </div>
 </div>
